--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+opencv-python-headless==4.5.4.60
+clip-by-openai
+
+torch
+torchaudio
+torchvision
 absl-py==2.0.0
 altair==5.1.2
 appnope
@@ -10,7 +16,6 @@ cachetools==5.3.2
 certifi==2023.7.22
 charset-normalizer==3.3.2
 click==8.1.7
-clip-by-openai
 cloudpickle==3.0.0
 comm
 contourpy==1.1.1
@@ -112,9 +117,7 @@ termcolor==2.3.0
 threadpoolctl==3.2.0
 toml==0.10.2
 toolz==0.12.0
-torch==2.1.0
-torchaudio==2.1.0
-torchvision==0.16.0
+
 tornado
 tqdm==4.66.1
 traitlets
@@ -127,5 +130,4 @@ wcwidth
 Werkzeug==3.0.1
 wrapt==1.14.1
 zipp
-opencv-python-headless==4.5.4.60
 
